Working auth, twill for sms verify, username edit endpoint
