# backend/pkg/api/auth_service.pb.go
@@ -35,7 +35,7 @@ func (m *AuthenticateRequest) Reset()         { *m = AuthenticateRequest{} }
 func (m *AuthenticateRequest) String() string { return proto.CompactTextString(m) }
 func (*AuthenticateRequest) ProtoMessage()    {}
 func (*AuthenticateRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_auth_service_b2a2b4ab08bb1684, []int{0}
+	return fileDescriptor_auth_service_097c5545847ae0db, []int{0}
 }
 func (m *AuthenticateRequest) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_AuthenticateRequest.Unmarshal(m, b)
@@ -63,7 +63,6 @@ func (m *AuthenticateRequest) GetPhone() string {
 }
 
 type AuthenticateResponse struct {
-	RequestId            string   `protobuf:"bytes,1,opt,name=request_id,json=requestId" json:"request_id,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -73,7 +72,7 @@ func (m *AuthenticateResponse) Reset()         { *m = AuthenticateResponse{} }
 func (m *AuthenticateResponse) String() string { return proto.CompactTextString(m) }
 func (*AuthenticateResponse) ProtoMessage()    {}
 func (*AuthenticateResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_auth_service_b2a2b4ab08bb1684, []int{1}
+	return fileDescriptor_auth_service_097c5545847ae0db, []int{1}
 }
 func (m *AuthenticateResponse) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_AuthenticateResponse.Unmarshal(m, b)
@@ -93,16 +92,8 @@ func (m *AuthenticateResponse) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_AuthenticateResponse proto.InternalMessageInfo
 
-func (m *AuthenticateResponse) GetRequestId() string {
-	if m != nil {
-		return m.RequestId
-	}
-	return ""
-}
-
 type SmsCodeCheckRequest struct {
 	Phone                string   `protobuf:"bytes,1,opt,name=phone" json:"phone,omitempty"`
-	RequestId            string   `protobuf:"bytes,2,opt,name=request_id,json=requestId" json:"request_id,omitempty"`
 	Code                 string   `protobuf:"bytes,3,opt,name=code" json:"code,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
@@ -113,7 +104,7 @@ func (m *SmsCodeCheckRequest) Reset()         { *m = SmsCodeCheckRequest{} }
 func (m *SmsCodeCheckRequest) String() string { return proto.CompactTextString(m) }
 func (*SmsCodeCheckRequest) ProtoMessage()    {}
 func (*SmsCodeCheckRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_auth_service_b2a2b4ab08bb1684, []int{2}
+	return fileDescriptor_auth_service_097c5545847ae0db, []int{2}
 }
 func (m *SmsCodeCheckRequest) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_SmsCodeCheckRequest.Unmarshal(m, b)
@@ -140,13 +131,6 @@ func (m *SmsCodeCheckRequest) GetPhone() string {
 	return ""
 }
 
-func (m *SmsCodeCheckRequest) GetRequestId() string {
-	if m != nil {
-		return m.RequestId
-	}
-	return ""
-}
-
 func (m *SmsCodeCheckRequest) GetCode() string {
 	if m != nil {
 		return m.Code
@@ -167,7 +151,7 @@ func (m *SmsCodeCheckResponse) Reset()         { *m = SmsCodeCheckResponse{} }
 func (m *SmsCodeCheckResponse) String() string { return proto.CompactTextString(m) }
 func (*SmsCodeCheckResponse) ProtoMessage()    {}
 func (*SmsCodeCheckResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_auth_service_b2a2b4ab08bb1684, []int{3}
+	return fileDescriptor_auth_service_097c5545847ae0db, []int{3}
 }
 func (m *SmsCodeCheckResponse) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_SmsCodeCheckResponse.Unmarshal(m, b)
@@ -320,29 +304,27 @@ var _AuthService_serviceDesc = grpc.ServiceDesc{
 	Metadata: "auth_service.proto",
 }
 
-func init() { proto.RegisterFile("auth_service.proto", fileDescriptor_auth_service_b2a2b4ab08bb1684) }
+func init() { proto.RegisterFile("auth_service.proto", fileDescriptor_auth_service_097c5545847ae0db) }
 
-var fileDescriptor_auth_service_b2a2b4ab08bb1684 = []byte{
-	// 322 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x92, 0xcf, 0x4e, 0xc2, 0x40,
-	0x10, 0xc6, 0x53, 0xfe, 0x29, 0x23, 0x07, 0xb3, 0xd4, 0x88, 0xa8, 0xd1, 0x6c, 0x3c, 0x18, 0x0c,
-	0xd4, 0x68, 0xbc, 0x70, 0x33, 0x9c, 0xb8, 0xc2, 0x5d, 0x5c, 0xdb, 0x09, 0xdd, 0x20, 0x3b, 0xb5,
-	0xbb, 0xe5, 0x01, 0x7c, 0x05, 0x1f, 0xcd, 0x17, 0xf0, 0xe0, 0x83, 0x98, 0x6d, 0x57, 0x03, 0x4d,
-	0xe3, 0x6d, 0xbf, 0xce, 0xcc, 0xf7, 0x9b, 0xf9, 0x52, 0x60, 0x22, 0x33, 0xf1, 0x42, 0x63, 0xba,
-	0x91, 0x21, 0x8e, 0x92, 0x94, 0x0c, 0xb1, 0xba, 0x48, 0x64, 0xff, 0x6c, 0x49, 0xb4, 0x7c, 0xc5,
-	0x40, 0x24, 0x32, 0x10, 0x4a, 0x91, 0x11, 0x46, 0x92, 0xd2, 0x45, 0x0b, 0xbf, 0x81, 0xee, 0x63,
-	0x66, 0x62, 0x54, 0x46, 0x86, 0xc2, 0xe0, 0x0c, 0xdf, 0x32, 0xd4, 0x86, 0xf9, 0xd0, 0x4c, 0x62,
-	0x52, 0xd8, 0xf3, 0x2e, 0xbd, 0xeb, 0xf6, 0xac, 0x10, 0xfc, 0x01, 0xfc, 0xdd, 0x66, 0x9d, 0x90,
-	0xd2, 0xc8, 0xce, 0x01, 0xd2, 0x62, 0x70, 0x21, 0x23, 0x37, 0xd2, 0x76, 0x5f, 0xa6, 0x11, 0x7f,
-	0x82, 0xee, 0x7c, 0xad, 0x27, 0x14, 0xe1, 0x24, 0xc6, 0x70, 0xf5, 0x2f, 0xa3, 0xe4, 0x55, 0x2b,
-	0x79, 0x31, 0x06, 0x8d, 0x90, 0x22, 0xec, 0xd5, 0xf3, 0x42, 0xfe, 0xe6, 0x02, 0xfc, 0x5d, 0x7f,
-	0xb7, 0x96, 0x0f, 0x4d, 0x43, 0x2b, 0x54, 0xbf, 0x80, 0x5c, 0xb0, 0x3e, 0xec, 0x67, 0x1a, 0x53,
-	0x25, 0xd6, 0xe8, 0xec, 0xff, 0x34, 0x3b, 0x86, 0x3d, 0xfb, 0xb6, 0x64, 0x0b, 0x68, 0xcc, 0x5a,
-	0x56, 0x4e, 0xa3, 0xbb, 0x2f, 0x0f, 0x0e, 0xec, 0xe9, 0xf3, 0x22, 0x5f, 0xf6, 0x0c, 0x9d, 0xed,
-	0x24, 0x58, 0x6f, 0x24, 0x12, 0x39, 0xaa, 0x48, 0xb2, 0x7f, 0x52, 0x51, 0x29, 0xf6, 0xe3, 0xa7,
-	0xef, 0x9f, 0xdf, 0x1f, 0xb5, 0x23, 0x7e, 0x18, 0x6c, 0x6e, 0x03, 0xb1, 0xd5, 0x31, 0xf6, 0x06,
-	0x8c, 0xa0, 0xb3, 0x7d, 0x94, 0x23, 0x54, 0xe4, 0xe8, 0x08, 0x55, 0x09, 0xf0, 0x41, 0x4e, 0xb8,
-	0xe2, 0x17, 0x65, 0x42, 0xa0, 0xd7, 0x7a, 0x68, 0xc3, 0x1b, 0x86, 0x76, 0x60, 0xec, 0x0d, 0x5e,
-	0x5a, 0xf9, 0x0f, 0x71, 0xff, 0x13, 0x00, 0x00, 0xff, 0xff, 0x57, 0xb8, 0x41, 0x37, 0x49, 0x02,
-	0x00, 0x00,
+var fileDescriptor_auth_service_097c5545847ae0db = []byte{
+	// 304 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x51, 0x41, 0x4e, 0xeb, 0x30,
+	0x14, 0x54, 0xda, 0xfe, 0x7e, 0x78, 0x74, 0x81, 0xdc, 0x02, 0xa1, 0x20, 0x81, 0x2c, 0x16, 0xa8,
+	0xa8, 0x0d, 0x82, 0x5d, 0x37, 0x08, 0x75, 0xc5, 0xb6, 0x3d, 0x40, 0x31, 0xc9, 0x53, 0x63, 0x95,
+	0xf8, 0x99, 0xd8, 0xe9, 0x01, 0xb8, 0x02, 0x47, 0xe3, 0x02, 0x2c, 0x38, 0x08, 0xb2, 0x13, 0x50,
+	0x8a, 0x22, 0x76, 0x6f, 0xfc, 0xc6, 0x33, 0x9e, 0x31, 0x30, 0x51, 0xd8, 0x74, 0x69, 0x30, 0xdf,
+	0xc8, 0x18, 0x27, 0x3a, 0x27, 0x4b, 0xac, 0x2d, 0xb4, 0x1c, 0x9e, 0xae, 0x88, 0x56, 0xcf, 0x18,
+	0x09, 0x2d, 0x23, 0xa1, 0x14, 0x59, 0x61, 0x25, 0x29, 0x53, 0x52, 0xf8, 0x15, 0xf4, 0xef, 0x0b,
+	0x9b, 0xa2, 0xb2, 0x32, 0x16, 0x16, 0xe7, 0xf8, 0x52, 0xa0, 0xb1, 0x6c, 0x00, 0xff, 0x74, 0x4a,
+	0x0a, 0xc3, 0xe0, 0x3c, 0xb8, 0xdc, 0x9d, 0x97, 0x80, 0x1f, 0xc2, 0x60, 0x9b, 0x6c, 0x34, 0x29,
+	0x83, 0xfc, 0x0e, 0xfa, 0x8b, 0xcc, 0xcc, 0x28, 0xc1, 0x59, 0x8a, 0xf1, 0xfa, 0x4f, 0x11, 0xc6,
+	0xa0, 0x13, 0x53, 0x82, 0x61, 0xdb, 0x1f, 0xfa, 0x99, 0x0b, 0x18, 0x6c, 0x0b, 0x94, 0xc2, 0x4e,
+	0xc1, 0xd2, 0x1a, 0xd5, 0xb7, 0x82, 0x07, 0x6c, 0x08, 0x3b, 0x85, 0xc1, 0x5c, 0x89, 0x0c, 0xc3,
+	0x96, 0x5f, 0xfc, 0x60, 0x76, 0x04, 0xff, 0xdd, 0xbc, 0x94, 0x89, 0x37, 0xe8, 0xcc, 0xbb, 0x0e,
+	0x3e, 0x24, 0x37, 0x1f, 0x01, 0xec, 0xb9, 0xc7, 0x2f, 0xca, 0x86, 0xd8, 0x23, 0xf4, 0xea, 0x59,
+	0x58, 0x38, 0x11, 0x5a, 0x4e, 0x1a, 0xba, 0x18, 0x1e, 0x37, 0x6c, 0xaa, 0xe0, 0x27, 0xaf, 0xef,
+	0x9f, 0x6f, 0xad, 0x03, 0xbe, 0x1f, 0x6d, 0xae, 0x23, 0x51, 0x63, 0x4c, 0x83, 0x11, 0x23, 0xe8,
+	0xd5, 0x43, 0x55, 0x0e, 0x0d, 0x45, 0x55, 0x0e, 0x4d, 0x0d, 0xf0, 0x91, 0x77, 0xb8, 0xe0, 0x67,
+	0xbf, 0x1d, 0x22, 0x93, 0x99, 0xb1, 0x2b, 0x6f, 0x1c, 0xbb, 0x0b, 0xd3, 0x60, 0xf4, 0xd4, 0xf5,
+	0x5f, 0x7a, 0xfb, 0x15, 0x00, 0x00, 0xff, 0xff, 0x7f, 0xbf, 0x6e, 0xe9, 0x0b, 0x02, 0x00, 0x00,
 }
